infrastructure/controllers/base/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: rabbitmq-system
spec:
  ingressClassName: haproxy
  rules:
    - host: "iferdel.dev"
      http:
        paths:
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
